# info_search

./: main.py  pyproject.toml
engine/: Cargo.toml
engine/index_api/: Cargo.toml
engine/index_api/src/: forward_index.rs  lib.rs  reversed_index.rs
engine/indexer/: Cargo.toml
engine/indexer/src/: main.rs
engine/server/: Cargo.toml
engine/server/src/: boolean_search.rs  main.rs
engine/src/: main.rs
helpers/: pyproject.toml
helpers/helpers/: bigrams.py  mongodb_connector.py  mystem.py  stemmer.py
scrapper/: config.py  documents.py  main.py  postprocess.py  pyproject.toml  scrapy.py
web-api/: Makefile  config.py  enrich.py  fuzzy.py  main.py  pyproject.toml
web-api/templates/: form.html
