[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["i.nedosekov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = {version = "^0.23.0"}
aiolimiter = "^1.0.0"
beautifulsoup4 = "^4.11.1"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
