[tool.poetry]
name = "helpers"
version = "0.1.0"
description = ""
authors = ["Ivan Nedosekov <ivan-nedd@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.7"
loguru = "^0.6.0"
motor = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
