[tool.poetry]
name = "web-api"
version = "0.1.0"
description = ""
authors = ["Ivan Nedosekov <ivan-nedd@mail.ru>"]
readme = "README.md"
packages = [{include = "web_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
jinja2 = "^3.1.2"
uvicorn = "^0.20.0"
loguru = "^0.6.0"
python-multipart = "^0.0.5"
pymystem3 = "^0.2.0"
helpers = {path = "../helpers", develop = true}


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.10.1"
black = "^22.10.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
