[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.149", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
index_api = {path = "../index_api"}
actix-web = "4"
serde_json = "1.0.91"
lazy_static = "1.4.0"
